WallpaperKcm: disconnect from child object

To avoid it triggering a slot during destruction.

BUG: 491059
(cherry picked from commit b757708b06611fb521b75120266a498d4a70b1a0)